css/main.css
::-webkit-scrollbar {
    display: none;
}

html, body {
  margin: 0;
  padding: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.container {
  position: fixed;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.shadow {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('../assets/shadow.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

.my-canvas {
  pointer-events: none;
}

.viewport-scroll-bar {
  width: 100vw;
}

/* GUI */
.menu {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  padding: 10px;
  box-sizing: border-box;
}

.param-container {
  display: flex;
  flex-direction: column;
}

.param-value {
  font-size: 12px;
}

.param-flip {
  transform: rotate(180deg);
}

